Removes superfluous lines in ContentSuggestions

The separators of the cells and headers where displayed even if they
had no background.
This CL removes those lines.

Bug: 740565
Change-Id: If6e2ab6225eec5e7cfc0112c8cff475530c479ed
Reviewed-on: https://chromium-review.googlesource.com/602228
Reviewed-by: Jean-François Geyelin <jif@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492004}
Former-commit-id: 8846e970a6ffcc6f3fc5fd554a3969b802899922